--- a/packages/react-router-dom/package.json
+++ b/packages/react-router-dom/package.json
@@ -14,8 +14,8 @@
   "types": "./index.d.ts",
   "unpkg": "./umd/react-router-dom.production.min.js",
   "dependencies": {
-    "react-router": "6.3.0",
-    "history": "^5.2.0"
+    "history": "^5.2.0",
+    "react-router": "6.3.0"
   },
   "peerDependencies": {
     "react": ">=16.8",
@@ -29,5 +29,10 @@
     "routing",
     "history",
     "link"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jsdom": "16.2.14",
+    "jest-fetch-mock": "3.0.3",
+    "jsdom": "19.0.0"
+  }
 }
