--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/semver": "^7.3.8",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@web-std/fetch": "4.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "chalk": "^4.1.1",
@@ -46,10 +47,8 @@
     "eslint-plugin-react-hooks": "next",
     "history": "^5.2.0",
     "jest": "^26.6.3",
-    "jest-fetch-mock": "3.0.3",
     "jsonfile": "^6.1.0",
     "metro-react-native-babel-preset": "^0.57.0",
-    "node-fetch": "^2.6.1",
     "prettier": "^2.5.1",
     "prompt-confirm": "^2.0.4",
     "react": "^17.0.2",
