--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@remix-run/web-fetch": "4.1.3",
     "@rollup/plugin-replace": "^2.2.1",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
@@ -34,7 +35,6 @@
     "@types/use-sync-external-store": "0.0.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "@web-std/fetch": "4.1.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-dev-expression": "^0.2.2",
     "chalk": "^4.1.1",
