--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router",
-  "version": "6.3.0",
+  "version": "6.4.0-pre.0",
   "author": "Remix Software <hello@remix.run>",
   "description": "Declarative routing for React",
   "repository": {
