--- a/packages/react-router-dom/package.json
+++ b/packages/react-router-dom/package.json
@@ -14,8 +14,12 @@
   "types": "./index.d.ts",
   "unpkg": "./umd/react-router-dom.production.min.js",
   "dependencies": {
-    "react-router": "6.3.0",
-    "history": "^5.2.0"
+    "history": "^5.2.0",
+    "react-router": "6.3.0"
+  },
+  "devDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
     "react": ">=16.8",
