--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "changeset": "changeset",
     "release": "changeset publish",
     "version-bump": "changeset version",
-    "postinstall": "manypkg fix"
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@ampproject/filesize": "^4.3.0",
@@ -25,8 +25,6 @@
     "@babel/preset-typescript": "^7.15.0",
     "@changesets/changelog-github": "0.4.4",
     "@changesets/cli": "^2.22.0",
-    "@manypkg/cli": "0.19.1",
-    "@manypkg/get-packages": "^1.1.3",
     "@rollup/plugin-replace": "^2.2.1",
     "@types/jest": "26.x",
     "@types/jsonfile": "^6.0.1",
@@ -48,11 +46,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "next",
-    "history": "^5.2.0",
+    "history": "^5.3.0",
     "jest": "^26.6.3",
     "jsonfile": "^6.1.0",
     "metro-react-native-babel-preset": "^0.57.0",
     "node-fetch": "^2.6.1",
+    "patch-package": "^6.4.7",
     "prettier": "^2.5.1",
     "prompt-confirm": "^2.0.4",
     "react": "^17.0.2",
