--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   },
   "dependencies": {
     "@ampproject/filesize": "^4.3.0",
-    "@ampproject/rollup-plugin-closure-compiler": "^0.26.0",
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-modules": "^0.1.4",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@remix-run/web-fetch": "4.1.3",
-    "@rollup/plugin-replace": "^2.2.1",
+    "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-replace": "4.0.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
     "@types/jest": "26.x",
@@ -71,12 +71,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "rollup": "^1.27.9",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-extensions": "^0.1.0",
-    "rollup-plugin-prettier": "^0.6.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "2.75.5",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-extensions": "0.1.0",
+    "rollup-plugin-prettier": "2.2.2",
+    "rollup-plugin-terser": "7.0.2",
     "semver": "^7.3.5",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.5"
