--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@remix-run/web-fetch": "4.1.3",
     "@rollup/plugin-babel": "5.3.1",
+    "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-replace": "4.0.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
