--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@remix-run/web-fetch": "4.1.3",
-    "@rollup/plugin-babel": "5.3.1",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "@rollup/plugin-replace": "4.0.0",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
     "@types/jest": "26.x",
@@ -72,11 +72,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "rollup": "2.75.5",
-    "rollup-plugin-copy": "3.4.0",
-    "rollup-plugin-extensions": "0.1.0",
-    "rollup-plugin-prettier": "2.2.2",
-    "rollup-plugin-terser": "7.0.2",
+    "rollup": "^2.75.5",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-extensions": "^0.1.0",
+    "rollup-plugin-prettier": "^2.2.2",
+    "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.5"
