--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch": "rollup -c -w",
     "changeset": "changeset",
     "release": "changeset publish",
-    "version-bump": "changeset version",
+    "version": "changeset version",
+    "version:experimental": "node scripts ./scripts/version experimental",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -65,6 +66,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
     "ts-jest": "^26.5.6",
+    "type-fest": "^2.13.0",
     "typescript": "^4.3.5"
   },
   "workspaces": {
