--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/jsonfile": "^6.0.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-native": "*",
+    "@types/react-native": "^0.61.0",
     "@types/react-test-renderer": "16.x",
     "@types/semver": "^7.3.8",
     "@types/use-sync-external-store": "0.0.3",
@@ -72,6 +72,10 @@
     "ts-jest": "^26.5.6",
     "type-fest": "^2.13.0",
     "typescript": "^4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   },
   "workspaces": {
     "packages": [
