--- a/packages/react-router-dom-v5-compat/package.json
+++ b/packages/react-router-dom-v5-compat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-dom-v5-compat",
-  "version": "6.4.0-pre.2",
+  "version": "6.4.0-pre.3",
   "author": "Remix Software <hello@remix.run>",
   "description": "Migration path to React Router v6 from v4/5",
   "repository": {
@@ -15,12 +15,12 @@
   "unpkg": "./umd/react-router.production.min.js",
   "dependencies": {
     "history": "^5.3.0",
-    "react-router": "6.4.0-pre.2"
+    "react-router": "6.4.0-pre.3"
   },
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8",
-    "react-router-dom": "4 || 5"
+    "react-router-dom": "6.4.0-pre.3"
   },
   "sideEffects": false,
   "keywords": [
