--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router",
-  "version": "6.4.0-pre.2",
+  "version": "6.4.0-pre.3",
   "author": "Remix Software <hello@remix.run>",
   "description": "Declarative routing for React",
   "repository": {
@@ -14,7 +14,7 @@
   "types": "./index.d.ts",
   "unpkg": "./umd/react-router.production.min.js",
   "dependencies": {
-    "@remix-run/router": "0.1.0"
+    "@remix-run/router": "0.2.0-pre.0"
   },
   "devDependencies": {
     "react": "^17.0.2"
