--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@remix-run/router",
+  "access": "public",
   "version": "0.2.0-pre.0",
   "author": "Remix Software <hello@remix.run>",
   "description": "Nested/Data-driven/Framework-agnostic Routing",
