chore: add `engines` field to `package.json`

--- a/packages/react-router-dom-v5-compat/package.json
+++ b/packages/react-router-dom-v5-compat/package.json
@@ -30,5 +30,8 @@
     "react": ">=16.8",
     "react-dom": ">=16.8",
     "react-router-dom": "4 || 5"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
