--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.5"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "filesize": {
     "packages/router/dist/router.production.min.js": {
       "none": "21 kB"
