Update to build to packages/[pkg]/dist

--- a/packages/react-router-dom-v5-compat/tsconfig.json
+++ b/packages/react-router-dom-v5-compat/tsconfig.json
@@ -14,7 +14,7 @@
 
     "skipLibCheck": true,
 
-    "outDir": "../../build/node_modules/react-router-dom-v5-compat",
+    "outDir": "dist",
     "rootDirs": ["."]
   }
 }
