--- a/packages/react-router-native/tsconfig.json
+++ b/packages/react-router-native/tsconfig.json
@@ -15,7 +15,7 @@
 
     "skipLibCheck": true,
 
-    "outDir": "../../build/node_modules/react-router-native",
+    "outDir": "dist",
     "rootDir": "."
   }
 }
