--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["**/*.ts"],
+  "include": ["index.ts"],
   "compilerOptions": {
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "target": "ES2020",
@@ -13,7 +13,7 @@
 
     "skipLibCheck": true,
 
-    "outDir": "../../build/node_modules/@remix-run/router",
+    "outDir": "dist",
     "rootDir": "."
   }
 }
