--- a/packages/react-router/tsconfig.json
+++ b/packages/react-router/tsconfig.json
@@ -14,7 +14,7 @@
 
     "skipLibCheck": true,
 
-    "outDir": "../../build/node_modules/react-router",
+    "outDir": "dist",
     "rootDir": "."
   }
 }
