--- a/packages/react-router-dom/package.json
+++ b/packages/react-router-dom/package.json
@@ -18,10 +18,10 @@
   "license": "MIT",
   "author": "Remix Software <hello@remix.run>",
   "sideEffects": false,
-  "main": "./main.js",
-  "unpkg": "./umd/react-router-dom.production.min.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/main.js",
+  "unpkg": "./dist/umd/react-router-dom.production.min.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "react-router": "6.4.0-pre.3"
   },
@@ -32,5 +32,14 @@
   "peerDependencies": {
     "react": ">=16.8",
     "react-dom": ">=16.8"
-  }
+  },
+  "files": [
+    "dist/",
+    "CHANGELOG.md",
+    "LICENSE.md",
+    "README.md",
+    "server.d.ts",
+    "server.js",
+    "server.mjs"
+  ]
 }
