--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -18,10 +18,10 @@
   "license": "MIT",
   "author": "Remix Software <hello@remix.run>",
   "sideEffects": false,
-  "main": "./main.js",
-  "unpkg": "./umd/react-router.production.min.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/main.js",
+  "unpkg": "./dist/umd/react-router.production.min.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@remix-run/router": "0.2.0-pre.0"
   },
@@ -30,5 +30,11 @@
   },
   "peerDependencies": {
     "react": ">=16.8"
-  }
+  },
+  "files": [
+    "dist/",
+    "CHANGELOG.md",
+    "LICENSE.md",
+    "README.md"
+  ]
 }
