--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -15,10 +15,16 @@
   "license": "MIT",
   "author": "Remix Software <hello@remix.run>",
   "sideEffects": false,
-  "main": "./main.js",
-  "unpkg": "./umd/router.production.min.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/main.js",
+  "unpkg": "./dist/umd/router.production.min.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/",
+    "CHANGELOG.md",
+    "LICENSE.md",
+    "README.md"
+  ],
   "publishConfig": {
     "access": "public"
   }
