--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "exclude": ["dist/**/*"],
   "include": ["**/*.ts"],
   "compilerOptions": {
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -13,7 +14,6 @@
 
     "skipLibCheck": true,
 
-    "outDir": "../../build/node_modules/@remix-run/router",
     "rootDir": "."
   }
 }
