--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     ]
   },
   "scripts": {
-    "build": "rollup -c && tsc -b",
+    "build": "rollup -c && node scripts/copy-to-root.mjs",
     "changeset": "changeset",
     "clean": "git clean -fdX .",
     "format": "prettier --ignore-path .eslintignore --write .",
@@ -42,15 +42,18 @@
   "dependencies": {
     "@ampproject/filesize": "^4.3.0",
     "@ampproject/rollup-plugin-closure-compiler": "^0.26.0",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-modules": "^0.1.4",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-modules": "^0.1.5",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.17.12",
     "@changesets/changelog-github": "0.4.4",
     "@changesets/cli": "^2.22.0",
     "@remix-run/web-fetch": "4.1.3",
-    "@rollup/plugin-replace": "^2.2.1",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
     "@types/jest": "26.x",
@@ -74,6 +77,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "next",
+    "fs-extra": "^10.1.0",
     "history": "^5.3.0",
     "jest": "^26.6.3",
     "jsonfile": "^6.1.0",
@@ -84,16 +88,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-renderer": "^17.0.2",
-    "rollup": "^1.27.9",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-copy": "^3.1.0",
+    "rollup": "^2.75.5",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-extensions": "^0.1.0",
-    "rollup-plugin-prettier": "^0.6.0",
+    "rollup-plugin-prettier": "^2.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "semver": "^7.3.5",
     "ts-jest": "^26.5.6",
     "type-fest": "^2.13.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.3"
   },
   "filesize": {
     "build/node_modules/@remix-run/router/router.production.min.js": {
