--- a/packages/react-router-native/tsconfig.json
+++ b/packages/react-router-native/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "files": ["index.tsx"],
+  "exclude": ["dist/**/*"],
   "compilerOptions": {
     "lib": ["ES2020", "DOM.Iterable"],
     "target": "ES2020",
@@ -15,7 +16,7 @@
 
     "skipLibCheck": true,
 
-    "outDir": "dist",
+    "outDir": ".",
     "rootDir": "."
   }
 }
