--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,7 @@ jobs:
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
           node scripts/publish.js
 
-  comment:
-    needs: [release]
-    name: 🛴 Kick off comment workflow
-    if: github.repository == 'remix-run/react-router'
-    uses: remix-run/react-router/.github/workflows/release-comments.yml@main
-    with:
-      ref: ${{ github.ref }}
+      - name: Comment on related issues and pull requests
+        uses: remix-run/react-router/.github/workflows/release-comments.yml@main
+        with:
+          ref: ${{ github.ref }}
