--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
 
   comment:
     needs: [release]
-    name: 🛴 Kick off comment workflow
+    name: 📝 Comment on related issues and pull requests
     if: github.repository == 'remix-run/react-router'
     uses: remix-run/react-router/.github/workflows/release-comments.yml@main
     with:
