--- a/examples/ssr-data-router/package.json
+++ b/examples/ssr-data-router/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.10.2",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
