--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -15,9 +15,8 @@
   "license": "MIT",
   "author": "Remix Software <hello@remix.run>",
   "sideEffects": false,
-  "main": "./dist/main.js",
-  "unpkg": "./dist/umd/router.production.min.js",
-  "module": "./dist/index.js",
+  "main": "./dist/router.cjs.js",
+  "module": "./dist/router.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist/",
