--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-test-renderer": "^17.0.2",
     "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-extensions": "^0.1.0",
     "rollup-plugin-prettier": "^0.6.0",
