ci: add "ready_for_review" to pr types
adding ready_for_review makes it so actions are run when converting a PR from a draft to a normal PR

in order to add additional types you also need to pass the default

Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,11 @@ on:
       - "docs/**"
       - "**/README.md"
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
     paths-ignore:
       - "docs/**"
       - "**/*.md"
