--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "^13.3.0",
-    "@types/jest": "27.x",
+    "@types/jest": "28.x",
     "@types/jsdom": "16.2.14",
     "@types/jsonfile": "^6.0.1",
     "@types/react": "^18.0.15",
@@ -65,7 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^28.1.3",
     "babel-plugin-dev-expression": "^0.2.2",
     "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
@@ -79,9 +79,9 @@
     "eslint-plugin-react-hooks": "next",
     "fs-extra": "^10.1.0",
     "history": "^5.3.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jsonfile": "^6.1.0",
-    "metro-react-native-babel-preset": "^0.57.0",
     "patch-package": "^6.4.7",
     "prettier": "^2.5.1",
     "prompt-confirm": "^2.0.4",
