ci: add custom token

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,5 +54,5 @@ jobs:
           title: "chore: Update version for release"
           publish: yarn release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN_SO_OTHER_ACTIONS_RUN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
