--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -4,7 +4,7 @@
     "@remix-run/changelog-github",
     { "repo": "remix-run/react-router" }
   ],
-  "commit": false,
+  "commit": false,nklnlkmnlknlknlkknnlknlknlkkl
   "fixed": [
     [
       "react-router",
