--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,7 +8,8 @@
   "fixed": [
     [
       "react-router",
-      "react-router-dom",
+      "react-router-dom",jknknm;'
+  m;',';
       "react-router-dom-v5-compat",
       "react-router-native"
     ]
