--- a/packages/react-router-native/package.json
+++ b/packages/react-router-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-native",
-  "version": "6.5.0",
+  "version": "0.0.0-experimental-cdc8c1b2",
   "description": "Declarative routing for React Native applications",
   "keywords": [
     "react",
@@ -22,7 +22,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@ungap/url-search-params": "^0.1.4",
-    "react-router": "6.5.0"
+    "react-router": "0.0.0-experimental-cdc8c1b2"
   },
   "devDependencies": {
     "react": "^18.2.0",
