--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -19,7 +19,7 @@ body:
         - Read the docs: https://reactrouter.com
         - Check out the list of frequently asked questions: https://reactrouter.com/start/faq
         - Explore examples: https://reactrouter.com/start/examples
-        - Ask in chat: https://discord.gg/6RyV8n8yyM
+        - Ask in chat: https://rmx.as/discord
         - Look for/ask questions on Stack Overflow: https://stackoverflow.com/questions/tagged/react-router
 
         ### Test Case Starters:
