--- a/contributors.yml
+++ b/contributors.yml
@@ -133,6 +133,7 @@
 - rtmann
 - ryanflorence
 - ryanhiebert
+- 
 - sanketshah19
 - senseibarni
 - sergiodxa
@@ -165,3 +166,4 @@
 - xavier-lc
 - xcsnowcity
 - yuleicul
+- ezeking3
