--- a/examples/auth/package.json
+++ b/examples/auth/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
