--- a/examples/custom-query-parsing/package.json
+++ b/examples/custom-query-parsing/package.json
@@ -10,7 +10,7 @@
     "jsurl": "0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^2.2.1",
