--- a/examples/navigation-blocking/package.json
+++ b/examples/navigation-blocking/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-router-dom": "^6.7.0-pre.3"
+    "react-router-dom": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "4.0.0",
