--- a/examples/ssr-data-router/package.json
+++ b/examples/ssr-data-router/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@remix-run/node": "^1.7.0",
-    "@remix-run/router": "^1.0.0",
+    "@remix-run/router": "0.0.0-experimental-e91cdc1e",
     "compression": "1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "history": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
