--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -15,7 +15,7 @@
     "express": "^4.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0"
+    "react-router-dom": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
