--- a/packages/react-router-dom/package.json
+++ b/packages/react-router-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-dom",
-  "version": "6.8.0",
+  "version": "0.0.0-experimental-e91cdc1e",
   "description": "Declarative routing for React web applications",
   "keywords": [
     "react",
@@ -23,8 +23,8 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@remix-run/router": "1.3.1",
-    "react-router": "6.8.0"
+    "@remix-run/router": "0.0.0-experimental-e91cdc1e",
+    "react-router": "0.0.0-experimental-e91cdc1e"
   },
   "devDependencies": {
     "react": "^18.2.0",
