--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:inspect": "node --inspect-brk ./node_modules/.bin/jest",
     "changeset": "changeset",
     "version": "changeset version",
+    "publish": "node scripts/publish.js",
     "postversion": "node scripts/postversion.mjs",
     "version:experimental": "node ./scripts/version experimental",
     "watch": "rollup -c -w"
