--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "0.0.0-experimental-63b6834e"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
