--- a/packages/react-router-dom-v5-compat/package.json
+++ b/packages/react-router-dom-v5-compat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-dom-v5-compat",
-  "version": "6.8.1",
+  "version": "0.0.0-experimental-cf9637ce",
   "description": "Migration path to React Router v6 from v4/5",
   "keywords": [
     "react",
@@ -24,7 +24,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "history": "^5.3.0",
-    "react-router": "6.8.1"
+    "react-router": "0.0.0-experimental-cf9637ce"
   },
   "peerDependencies": {
     "react": ">=16.8",
