ci: release commenting overhaul
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,7 +80,7 @@ jobs:
 
       - id: find_package_version
         run: |
-          package_version=$(node ./scripts/release/find-release-from-changeset.js)
+          package_version=$(node ./scripts/find-release-from-changeset.js)
           echo "package_version=${package_version}" >> $GITHUB_OUTPUT
         env:
           PACKAGE_VERSION_TO_FOLLOW: "react-router"
@@ -90,8 +90,17 @@ jobs:
     name: 📝 Comment on related issues and pull requests
     if: github.repository == 'remix-run/react-router' && needs.find_package_version.outputs.package_version != ''
     needs: [release, find_package_version]
-    uses: ./.github/workflows/release-comments.yml
-    with:
-      ref: refs/tags/react-router@${{ needs.find_package_version.outputs.package_version }}
-      package_version_to_follow: "react-router"
-      release_branch: ${{ github.ref_name }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: 📝 Comment on issues
+        uses: mcansh/release-comment-action@v0.1.3
+        env:
+          DIRECTORY_TO_CHECK: "./packages"
+          PACKAGE_VERSION_TO_FOLLOW: "react-router"
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GH_TOKEN: ${{ github.token }}
