--- a/.github/workflows/release-comments.yml
+++ b/.github/workflows/release-comments.yml
@@ -18,4 +18,4 @@ jobs:
         uses: mcansh/release-comment-action@v0.3.1
         with:
           DIRECTORY_TO_CHECK: "./packages"
-          PACKAGE_VERSION_TO_FOLLOW: "react-router"
+          PACKAGE_NAME: "react-router"
