feat: add `@remix-run/node/install` side-effect to allow `--require` (#6132)

--- a/packages/remix-serve/package.json
+++ b/packages/remix-serve/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@remix-run/express": "1.15.0",
+    "@remix-run/node": "1.15.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
