--- a/packages/remix-node/package.json
+++ b/packages/remix-node/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "sideEffects": false,
+  "sideEffects": ["./install.js"],
   "dependencies": {
     "@remix-run/server-runtime": "1.15.0",
     "@remix-run/web-fetch": "^4.3.2",
