chore(remix-node): add missing files to published package (#6179)

--- a/packages/remix-node/package.json
+++ b/packages/remix-node/package.json
@@ -37,6 +37,8 @@
   "files": [
     "dist/",
     "globals.d.ts",
+    "install.d.ts",
+    "install.js",
     "CHANGELOG.md",
     "LICENSE.md",
     "README.md"
