fix(react-router-dom): fix submitter serialization
Now that evergreen browsers support the submitter parameter to
the FormData constructor, we can rely on that to correctly
populate the form data set (i.e. ensure they appear in the
right spot, ensure image buttons are encoded correctly).

For browsers that don't support it, we continue to just append
the submit button's entry to the end, and we also add rudimentary
support for image buttons. If developers want full support for
legacy browsers, they can use the formdata-submitter-polyfill,
just as this PR does for the jsdom tests.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/semver": "^7.3.8",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
+    "@typescript/lib-dom": "npm:@types/web",
     "abort-controller": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.0.3",
