feat!: default to serverModuleFormat esm (#6949)
Co-authored-by: Mark Dalgleish <mark.john.dalgleish@gmail.com>

--- a/integration/helpers/cf-template/package.json
+++ b/integration/helpers/cf-template/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "sideEffects": false,
   "main": "build/index.js",
+  "type": "module",
   "scripts": {},
   "dependencies": {
     "@remix-run/cloudflare": "0.0.0-local-version",
