--- a/packages/remix-express/tsconfig.json
+++ b/packages/remix-express/tsconfig.json
@@ -7,13 +7,12 @@
     "skipLibCheck": true,
     "composite": true,
 
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "declaration": true,
     "emitDeclarationOnly": true,
     "rootDir": ".",
-    "outDir": "../../build/node_modules/@remix-run/express/dist",
-    "composite": true
+    "outDir": "../../build/node_modules/@remix-run/express/dist"
   }
 }
