--- a/packages/remix-serve/package.json
+++ b/packages/remix-serve/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@remix-run/express": "1.19.3",
     "@remix-run/node": "1.19.3",
+    "chokidar": "^3.5.3",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
