--- a/integration/package.json
+++ b/integration/package.json
@@ -1,3 +1,38 @@
 {
-  "type": "module"
+  "name": "integration-tests",
+  "version": "0.0.0-local-version",
+  "private": true,
+  "description": "deps needed for integration tests",
+  "type": "module",
+  "scripts": {},
+  "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.3.0",
+    "@cloudflare/workers-types": "^4.20230518.0",
+    "@playwright/test": "^1.33.0",
+    "@vanilla-extract/css": "^1.10.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
+    "cross-spawn": "^7.0.3",
+    "dedent": "^0.7.0",
+    "execa": "^5.1.1",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "get-port": "^5.1.1",
+    "glob": "8.0.3",
+    "globby": "^11.1.0",
+    "isbot": "^3.6.8",
+    "npm-run-all": "^4.1.5",
+    "pidtree": "^0.6.0",
+    "postcss": "^8.4.19",
+    "postcss-import": "^15.1.0",
+    "prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "serialize-javascript": "^6.0.1",
+    "shelljs": "^0.8.5",
+    "strip-indent": "^3.0.0",
+    "tailwindcss": "^3.3.0",
+    "type-fest": "^4.0.0",
+    "typescript": "^5.1.0"
+  }
 }
