fix(docs): add backticks to element names (#10874)
Co-authored-by: Matt Brophy <matt@brophy.org>
Co-authored-by: remix-cla-bot[bot] <92060565+remix-cla-bot[bot]@users.noreply.github.com>
Co-authored-by: Ayushman Chhabra <ayushmanchhabra@users.noreply.github.com>

--- a/contributors.yml
+++ b/contributors.yml
@@ -25,6 +25,7 @@
 - avipatel97
 - awreese
 - aymanemadidi
+- ayushmanchhabra
 - babafemij-k
 - bavardage
 - bbrowning918
@@ -112,8 +113,8 @@
 - johnpangalos
 - jonkoops
 - jrakotoharisoa
-- kachun333
 - juanpprieto
+- kachun333
 - kantuni
 - kark
 - KAROTT7
