--- a/packages/react-router-dom/package.json
+++ b/packages/react-router-dom/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-dom",
-  "version": "6.19.0",
+  "version": "0.0.0-experimental-178bc9ee",
   "description": "Declarative routing for React web applications",
   "keywords": [
     "react",
@@ -23,8 +23,8 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@remix-run/router": "1.12.0",
-    "react-router": "6.19.0"
+    "@remix-run/router": "0.0.0-experimental-178bc9ee",
+    "react-router": "0.0.0-experimental-178bc9ee"
   },
   "devDependencies": {
     "react": "^18.2.0",
